fixed dark mode debug hover colors

--- a/assets/css/app-dark.css
+++ b/assets/css/app-dark.css
@@ -22,18 +22,89 @@ body.dark-mode {
     }
   }
 
+  header {
+    background-color: var(--black);
+
+    .menu-left {
+      color: var(--light-color);
+
+      button {
+        color: var(--light-color);
+
+        &:hover {
+          background-color: var(--debug-color2);
+          color: var(--light-color);
+        }
+      }
+
+      #button-nav {
+        img {
+          filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(262deg)
+            brightness(104%) contrast(96%);
+        }
+      }
+
+      #nav-overlay {
+        #nav-content {
+          background-color: var(--black);
+
+          a {
+            color: var(--white);
+          }
+
+          .container {
+            .nav-list {
+              a {
+                &:hover {
+                  background-color: var(--base-color);
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+
+    .debug-buttons {
+      .ddmenu {
+        @media (hover: hover) {
+          .ddgroup {
+            &:hover {
+              background: var(--debug-color);
+            }
+          }
+        }
+
+        .ddgroup {
+          @media (hover: hover) {
+            button {
+              &:hover {
+                background: var(--debug-color);
+              }
+            }
+          }
+
+          .ddsub {
+            button {
+              color: var(--dark-color);
+
+              &:hover {
+                background-color: var(--dark-color);
+                color: var(--light-color);
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
   section#game {
     background-color: var(--black);
 
     #mode-container {
       #daily-details {
         color: var(--white);
-      }
-
-      .setting-row {
-        a {
-          color: var(--white);
-        }
       }
     }
 
@@ -109,39 +180,6 @@ body.dark-mode {
               background-color: var(--gray-dark2);
               border: none;
               color: var(--white);
-            }
-          }
-        }
-      }
-    }
-  }
-
-  header {
-    background-color: var(--black);
-
-    .menu-left {
-      #button-nav {
-        img {
-          filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(262deg)
-            brightness(104%) contrast(96%);
-        }
-      }
-
-      #nav-overlay {
-        #nav-content {
-          background-color: var(--black);
-
-          a {
-            color: var(--white);
-          }
-
-          .container {
-            .nav-list {
-              a {
-                &:hover {
-                  background-color: var(--base-color);
-                }
-              }
             }
           }
         }
